php-phalcon/DeploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: php-phalcon
  name: php-phalcon
spec:
  replicas: 1
  selector:
    app: php-phalcon
    deploymentconfig: php-phalcon
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: php-phalcon
        deploymentconfig: php-phalcon
    spec:
      containers:
      - image: php-phalcon/php-phalcon:latest
        imagePullPolicy: Always
        name: php-phalcon
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - php-phalcon
      from:
        kind: ImageStreamTag
        name: php-phalcon:latest
    type: ImageChange
