php-phalcon/Services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-phalcon
  name: php-phalcon
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: php-phalcon
    deploymentconfig: php-phalcon
  sessionAffinity: None
  type: ClusterIP
