php-phalcon/Route.yaml
apiVersion: v1
kind: Route
metadata:
  name: php-phalcon
spec:
  to:
    kind: Service
    name: php-phalcon
